<resources>
    <string name="app_name">NMedia</string>
    <string name="app_text">Netology</string>
    <string name="author_avatar">Author avatar</string>
    <string name="netology_main_url" translatable="false">https://netology.ru/</string>
    <string name="content">"Hi, this is a new Netology!Once upon a time, Netology began with online marketing initiatives.Then there were courses in design, development, analytics and management.We grow ourselves and help students grow: from beginners to confident professionals.But the most important thing remains with us: we believe, which makes us want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes -> https://netology.ru/"</string>
    <string name="published">"@sample/new_posts.json/data/published"</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="demo_like_value">10</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Post save</string>
    <string name="description_post_like">Post liked</string>
    <string name="demo_share_value" translatable="false">5</string>
    <string name="demo_viewed_value" translatable="false"> 10</string>
    <string name="menu_edit">Edit</string>
    <string name="share_post">Share post</string>
    <string name="menu_edit_text">Edit text</string>
</resources>