<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/author_avatar"
        android:src="@drawable/ic_netology"
        tools:srcCompat="@sample/posts_avatars"
        />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        android:singleLine="true"
        android:ellipsize="end"
        tools:text ="@sample/new_posts.json/data/author"
        />
    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/new_posts.json/data/published"
        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="avatar,published,menu_button"
        app:barrierDirection="bottom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_barrier"
        tools:text="@string/content"
        tools:autoLink="web"
        android:linksClickable="true"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_24"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:background="@android:color/transparent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/likes_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/demo_like_value"
        app:layout_constraintStart_toEndOf="@id/like_button"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_24"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/likes_value"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/common_spacing"
        />

    <TextView
        android:id="@+id/shared_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/demo_share_value"
        app:layout_constraintStart_toEndOf="@id/share_button"
        app:layout_constraintTop_toBottomOf="@id/content"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_red_eye_24"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintEnd_toStartOf="@id/viewed_value"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/demo_viewed_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>