<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SharePostActivity">

    <ImageView
        android:id="@+id/pensil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/close"
        />
    <TextView
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_text"
        android:textColor="@color/blue_900"
        app:layout_constraintStart_toEndOf="@id/pensil"
        app:layout_constraintTop_toTopOf="@id/close"
        />
    <TextView
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/pensil"
        app:layout_constraintEnd_toStartOf="@id/close"
        app:layout_constraintBottom_toTopOf="@id/content"
        android:maxLines="3"
        android:ellipsize="end"
        />
    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_48"
        android:padding="4dp"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/content"
        />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/content"
        android:maxLines="6"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/coordinator"
       />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ok"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/description_post_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_check_24"
            app:layout_anchor="@id/bottomAppBar"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>